Fix sidebar alignment
The sidebar is currently not correctly vertically aligned to the fieldset it most of the time is displayed with (ie. in the order detail views and the user detail views).

Use a relatively unit for top margin instead and move the top border to the heading to respect the column gutter.

--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -1,13 +1,13 @@
 body:not(.new-layout) #sidebar {
   overflow: visible;
-  border-top: 1px solid $color-border;
-  margin-top: 17px;
+  margin-top: 1.5rem;
 
   .sidebar-title {
     color: $color-2;
     text-align: center;
     font-size: 16px;
     font-weight: $font-weight-bold;
+    border-top: 1px solid $color-border;
 
     > span {
       display: inline;
